# cpp-vsb

./: README.md
budget-tracker/: .gitignore  CMakeLists.txt  main.cpp  readme.md  tracker.cpp  utils.cpp  utils.h
budget-tracker/include/: editor.h  expanse.h  expense.h  goal.h  gui.h  income.h  tracker.h  ui.h  user.h  utils.h
budget-tracker/src/: editor.cpp  expanse.cpp  expense.cpp  gui.cpp  income.cpp  main.cpp  tracker.cpp  ui.cpp  user.cpp  utils.cpp
task1/: CMakeLists.txt  main.cpp  tasks.cpp  tasks.h
task1/build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake  tasks  tests
task1/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  tasks  tests
task2/: CMakeLists.txt  assingment.md  main.cpp  tasks.cpp  tasks.h
task2/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  tasks  tests
task3/: main.cpp  tasks.cpp  tasks.h  tests.cpp
task4/: .gitignore  CMakeLists.txt  main.cpp  tasks.cpp  tasks.h  tests.cpp
task5/: assignment.md  tasks.cpp  tasks.h  tests.cpp
task6/: tasks.cpp  tasks.h  tests.cpp
task7/: tasks.cpp  tasks.h  tests.cpp
